--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,20 @@ jobs:
     container: ghcr.io/fo-zi/nexus-ci-base:latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout eeprom-driver repository
         uses: actions/checkout@v4
+        with:
+          path: eeprom-driver
 
       - name: Initialize West workspace
         run: |
+          cd eeprom-driver
           west init --local .
           west update
 
       - name: Build and run tests
         run: |
-          cd tests
+          cd eeprom-driver/tests
           cmake -B build
           cmake --build build
           ctest --test-dir build --output-on-failure --verbose
