Adding coverage job to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,3 +50,37 @@ jobs:
           cmake -B build
           cmake --build build
           ctest --test-dir build --output-on-failure --verbose
+
+  coverage:
+    name: Code Coverage
+    runs-on: ubuntu-latest
+    container: ghcr.io/fo-zi/nexus-ci-base:latest
+
+    steps:
+      - name: Checkout eeprom-driver repository
+        uses: actions/checkout@v4
+        with:
+          path: eeprom-driver
+
+      - name: Initialize West workspace
+        run: |
+          cd eeprom-driver
+          west init --local .
+          west update
+
+      - name: Build and run coverage
+        run: |
+          cd eeprom-driver/tests
+          cmake -B build-coverage -DENABLE_COVERAGE=ON
+          cmake --build build-coverage
+          cd build-coverage
+          make coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./eeprom-driver/tests/build-coverage/coverage/coverage.info
+          flags: unittests
+          name: eeprom-coverage
+          fail_ci_if_error: true
